# wishbone-gen

./: .gitignore  .gitmodules  Bus.sv  CMakeLists.txt  README.md  SharedBus.sv  SharedBus_bollVec.sv  SharedBus_unmanagedVec.sv  build.sbt
examples/: RRopenRISC.xml  or1420FixedPriority_1_2_3_4.xml  or1420FixedPriority_3_4_1_1.xml  or1420FixedPriority_3_4_1_2.xml  or1420FixedPriority_4_3_1_1.xml  or1420FixedPriority_4_3_1_2.xml  or1420FixedPriority_4_3_2_1.xml  or1420NoBurst.xml  or1420RoundRobin_1_1_1_1.xml  priorityOpenRISC.xml  shared_bus.xml
ext/: CMakeLists.txt
src/: bus_description.cpp  bus_description.hpp  main.cpp
src/main/scala/: Cli.scala  Description.scala  Generators.scala  NameUtils.scala  SharedBus.scala
src/main/scala/bus/: BusModule.scala  SharedBus.scala
src/main/scala/bus/arbiter/: ArbiterModule.scala  BaseArbiterModule.scala  FixedPriorityArbiter.scala  RRArbiter.scala  StatefulArbiterModule.scala  WeightedRRArbiter.scala
src/main/scala/test/: FixedPrioritySharedBusTest.scala  GenericBusTest.scala  RoundRobinSharedBusTest.scala  SharedBusTest.scala
src/test/scala/: ParserTest.scala  SharedBusTest.scala
tests/: example.xml  memorymap.xml  parser_missing_tag.xml  parser_overlaping_memory_regions.xml  shared_bus_less_components.xml  shared_bus_more_components.xml
verilog-codegen/: CMakeLists.txt  identifier.hpp  module.cpp  module.hpp  token.cpp  token.hpp  tree.cpp  tree.hpp  tree_helper.hpp
verilog-codegen/module_items/: all_items.hpp  conditionals.cpp  conditionals.hpp  data.cpp  data.hpp  operations.hpp
